# noveum-ai-gateway

./: .cursorrules  .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md
.github/workflows/: docker-build.yml  rust.yml
docs/: CONTRIBUTING.md  TODO.md  configuration.md  deployment.md  elasticsearch-integration.md  logs.md  telemetry-plugins.md
docs/providers/: anthropic.md  bedrock.md  fireworks.md  groq.md  openai.md  together.md
k8/: ai-gateway.yaml  elasticsearch-secret.yaml
src/: config.rs  context.rs  error.rs  handlers.rs  main.rs  proxy.rs
src/providers/: anthropic.rs  bedrock.rs  fireworks.rs  groq.rs  mod.rs  openai.rs  together.rs  utils.rs
src/proxy/: client.rs  mod.rs  signing.rs
src/telemetry/: metrics.rs  middleware.rs  mod.rs  provider_metrics.rs
src/telemetry/exporters/: mod.rs  prometheus.rs
src/telemetry/plugins/: console.rs  elasticsearch.rs  mod.rs
tests/: .env.test.example  README.md  run_integration_tests.rs  run_tests.sh
tests/integration/: anthropic_test.rs  bedrock_test.rs  common.rs  fireworks_test.rs  groq_test.rs  mod.rs  openai_test.rs  together_test.rs
tmp/: FATURE_LOGS.md
