[package]
name = "magicapi-ai-gateway"
version = "0.1.8"
edition = "2021"
description = "A high-performance AI Gateway proxy for routing requests to various AI providers, offering seamless integration and management of multiple AI services"
authors = ["MagicAPI Team <team@magicapi.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://magicapi.com"
repository = "https://github.com/magicapi/ai-gateway"
documentation = "https://docs.magicapi.com"
readme = "README.md"
keywords = ["ai", "gateway", "proxy", "openai", "llm"]
categories = ["web-programming", "api-bindings", "asynchronous"]
exclude = [
    ".env",
    ".cursorrules",
    ".github/**/*",
    ".cargo_vcs_info.json",
    "Cargo.toml.orig"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
axum = { version = "0.7", features = ["http2", "tokio"] }
tokio = { version = "1.0", features = ["full", "parking_lot", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["cors", "compression-full"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.12.9", features = ["stream", "json", "rustls-tls", "http2", "gzip", "brotli"], default-features = false }
http = "1.0"
bytes = { version = "1.0", features = ["serde"] }
dotenv = "0.15"
futures-util = { version = "0.3", features = ["io"] }
once_cell = "1.18"
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.15"